Implemented token retrieval using the authorization code flow, and a dynamic toolbar button showing the current login state.